fixes bottom and top border for sidebar avoiding overlapping

--- a/src/main.css
+++ b/src/main.css
@@ -21,8 +21,9 @@ a {
   color: #074d6790;
 }
 
-.app-header {
+.margin-top-env {
   padding-top: env(safe-area-inset-top);
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+  padding-bottom: env(safe-area-inset-bottom);
 }
